<resources>
    <string name="app_name">K234111E</string>
    <string name="str_welcome">Welcome to K234111E</string>
    <string name="str_clickme">Click me</string>
    <string name="str_login_successful">Login Successful</string>
    <string name="str_login_failed">Login failed</string>
    <string name="str_login_title">Login system</string>
    <string name="str_username">User name</string>
    <string name="str_hitn_username">Enter your username</string>
    <string name="str_password">Password</string>
    <string name="str_hint_password">Enter your password</string>
    <string name="str_login">LOGIN</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_exit">btnExit</string>
    <string name="str_open_cal_app" />
    <string name="str_save_login">Save login information</string>
    <string name="str_admin_right">Admin</string>
    <string name="str_employee_right">Employee</string>
</resources>